--- a/styles.css
+++ b/styles.css
@@ -550,7 +550,7 @@ h1, h2, h3, h4, h5 {
 }
 .team-photo {
     width: 100%;
-    height: 280px;
+    aspect-ratio: 1 / 1;
     background: var(--clr-primary-light);
     display: flex;
     align-items: center;
